fix playlist overflow-x position

--- a/src/pages/home/ui/generate-playlist/generate-playlist.module.scss
+++ b/src/pages/home/ui/generate-playlist/generate-playlist.module.scss
@@ -101,6 +101,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
   max-height: 558px;
